--- a/zadaci/cssHTML/style.css
+++ b/zadaci/cssHTML/style.css
@@ -1,11 +1,34 @@
 *{
     margin: 0;
     padding: 0;
-    
+    font-family: "Verdana";
+    font-size: 12px;
 }
 
-nav {
-
-   position: fixed;
-
+#main {
+width: 100%;
+height: 100vh;
+display: flex;
+text-align: center;
 }
+
+#nav a{
+    display: list-item;
+    font-size: 14px;
+    letter-spacing: 1px;
+    padding: 5px;
+}
+#nav {
+    background-color: #9ea7aa   ;
+    width: 15%;
+}
+#article {
+    width: 900px;
+    margin-right: auto;
+    margin-left: 15pt;
+}
+
+th {
+    background-color:#b0bec5;
+    color: white;
+  }
