--- a/Vezba/boot/style.css
+++ b/Vezba/boot/style.css
@@ -9,3 +9,24 @@
     border-bottom: 1px solid #ccc;
     padding: 10px 0;
   }
+
+  .container {
+    padding: 2px;
+
+  }
+
+  .card-img-top-ico {
+    height: 60px;
+    width: 60px;
+  }
+
+  .footer {
+    background-color: black;
+  }
+
+  .bg-dark {
+    padding: 40px;
+  }
+
+  
+ 
