--- a/zadaci/DOM/style.css
+++ b/zadaci/DOM/style.css
@@ -11,6 +11,13 @@ body {
 #login-button {
     width: 100%;
     height: 40px;
+    font-size: 18px;
+}
+
+#result {
+    font-size: 18px;
+    font-weight: bold;
+    font-style: italic;
 }
 
 form label,
@@ -32,12 +39,22 @@ form div {
 }
 
 .user .fa {
+    display: none;  
     position: absolute;
     top: 50%;
     right: 3%;
- 
+    font-size: 20px;
 }
 
 .user {
     position: relative;
+}
+
+ 
+.fa-times {
+    color: red;
+}
+
+.fa-check {
+    color: green;
 }
